# vis-psyche

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VizPsyche.sln  build.bat  debug_build.bat
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/src/: SandboxApp.cpp
VizEngine/: CMakeLists.txt  VizEngine.vcxproj  VizEngine.vcxproj.filters  imgui.ini
VizEngine/docs/Book/: 00_Introduction.md  01_BuildSystem.md  02_DLLArchitecture.md  03_OpenGLFundamentals.md  04_Abstractions.md  05_EngineArchitecture.md  06_CurrentState.md  06_MultipleObjects.md  07_Lighting.md  A_Reference.md  README.md
VizEngine/include/glad/: glad.h
VizEngine/src/: VizEngine.h  vepch.h
VizEngine/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
VizEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
VizEngine/src/VizEngine/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  vepch.h
VizEngine/src/VizEngine/Core/: Camera.cpp  Camera.h  Input.cpp  Input.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneObject.h  TinyGLTF.cpp  Transform.h
VizEngine/src/VizEngine/Events/: AppEvent.h  ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VizEngine/src/VizEngine/GUI/: ImGuiLayer.cpp  ImGuiLayer.h  UIManager.cpp  UIManager.h
VizEngine/src/VizEngine/OpenGL/: Commons.h  CubemapUtils.cpp  CubemapUtils.h  ErrorHandling.cpp  ErrorHandling.h  Framebuffer.cpp  Framebuffer.h  GLFWManager.cpp  GLFWManager.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glad.c
VizEngine/src/VizEngine/Renderer/: Bloom.cpp  Bloom.h  Skybox.cpp  Skybox.h
VizEngine/src/VizPsyche/: Application.h  Log.cpp  Log.h
VizEngine/src/VizPsyche/OpenGL/: GLFWManager.h  VertexArray.cpp  imgui.ini
VizEngine/src/resources/shaders/: default.shader  defaultlit.shader  equirect_to_cube.shader  lit.shader  pbr.shader  shadow_depth.shader  skybox.shader  tonemapping.shader  unlit.shader
VizPsyche/: ErrorHandling.cpp  ErrorHandling.h  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderClass.cpp  ShaderClass.h  UIManager.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VizPsyche.sln  VizPsyche.vcxproj  VizPsyche.vcxproj.filters  default.shader  imgui.ini
VizPsyche/src/: GLFWManager.cpp  GLFWManager.h  Main.cpp  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VizPsyche.h
VizPsyche/src/VizPsyche/: Application.cpp  Application.h  Core.h  EntryPoint.h  GLFWManager.h
VizPsyche/src/VizPsyche/OpenGL/: IndexBuffer.cpp  Texture.cpp  Texture.h  VertexArray.h
VizPsyche/src/resources/shaders/: default.shader
